# Assembler-Project

./: CMakeLists.txt  MachineCode.txt  MakeFile  README.md  convertToBaseFour.c  encrypted.txt  something.txt
HeaderFiles/: DataStructures.h  DataStructurs.h  Errors.h  Globals.h  convertToBaseFour.h  convert_to_base_four.h  firstPass.h  first_pass.h  globals.h  preAssembler.h  pre_assembler.h  secondPass.h  second_pass.h  tables.h  utilities.h
SourceFiles/: DataStructures.c  Errors.c  assembler.c  convertToBaseFour.c  convert_to_base_four.c  firstPass.c  first_pass.c  main.c  preAssembler.c  pre_assembler.c  secondPass.c  second_pass.c  tables.c  utilities.c
examples/: invalid_input_1.am  invalid_input_1.as  invalid_input_2.am  invalid_input_2.as  invalid_input_3.am  invalid_input_3.as  invalid_input_4.am  invalid_input_4.as  valid_input_1.am  valid_input_1.as  valid_input_1.ob  valid_input_2.am  valid_input_2.as  valid_input_2.ent  valid_input_2.ext  valid_input_2.ob  valid_input_3.am  valid_input_3.as  valid_input_3.ent  valid_input_3.ob  valid_input_4.am  valid_input_4.as  valid_input_4.ent  valid_input_4.ext  valid_input_4.ob
